First page finished

--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon</title>
+    <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
-        <h1>Bienvenu sur pokédex ! 1er Génération</h1>
+        <h1 class="container">PokéSearch</h1>
     </header>
 
     <main>
-        <section>
-            <table id="pokemonsContainer">
+        <section class="container">
+            <h2>Bienvenu sur pokédex ! 1er Génération</h2>
+            <div class="modalContainer">
+                <table id="pokemonsContainer">
 
-            </table>
+                </table>
+            </div>
         </section>
     </main>
 
