--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <header>
-        <h1 class="container">PokéSearch</h1>
+        <div class="container">
+            <h1>PokéSearch</h1>
+            <nav><a href="generateur.html">Générateur</a></nav>
+        </div>
     </header>
 
     <main>
