--- a/generateur.html
+++ b/generateur.html
@@ -13,14 +13,15 @@
 <body>
     <header>
         <div class="container">
-            <h1>PokéSearch</h1>
+            <h1> <a href="index.html">PokéSearch</a></h1>
             <nav><a href="generateur.html">Générateur</a></nav>
         </div>
     </header>
     
     <main>
-        <section class="container">
+        <section class="container containerGeneratePokemon" id="sectionContainer">
             <h2>Générateur PokéBattle</h2>
+            <button id="generate">Generate</button>
     
         </section>
     </main>
@@ -30,7 +31,7 @@
     </footer>
 
 
-    <script src="assets/js/generateur.js"></script>
+    <script type="module" src="assets/js/generateur.js"></script>
 </body>
 
 </html>
