--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>PokéSearch</h1>
+            <h1><a href="index.html">PokéSearch</a></h1>
             <nav><a href="generateur.html">Générateur</a></nav>
         </div>
     </header>
